--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </li>
             <li class="nav-item cta">
               <a
-                href="contact.html"
+                href="https://drive.google.com/file/d/1GhorbXygS-micuUoT6qGqPuwXSUxVVSx/view?usp=sharing"
                 class="nav-link"
                 data-toggle="modal"
                 data-target="#modalRequest"
@@ -117,7 +117,7 @@
             </p>
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
               <a
-                href="https://drive.google.com/file/d/1358Hpqx6If6iS8VvQ3QSsdcZ-UmX9bk-/view?usp=share_link"
+                href="https://drive.google.com/file/d/1GhorbXygS-micuUoT6qGqPuwXSUxVVSx/view?usp=sharing"
                 class="btn btn-primary px-4 py-3"
                 >Xem bài thi</a
               >
