--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       </div>
     </footer>
 
-    <!-- loader -->
+    <!-- Loader -->
     <div id="ftco-loader" class="show fullscreen">
       <svg class="circular" width="48px" height="48px">
         <circle
