--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                 ><span class="icon-facebook p-2"></span>facebook</a
               >
             </li>
-            <li class="nav-item cta">
+            <li class="nav-item">
               <a
-                href="https://drive.google.com/file/d/1TvfClARdfk5n_wbsSVgyD7Rf-eorCSnz/view?usp=sharing"
                 class="nav-link"
-                ><span>Xem bài thi</span></a
+                href="https://drive.google.com/file/d/1TvfClARdfk5n_wbsSVgyD7Rf-eorCSnz/view?usp=sharing"
+                >Xem bài thi</a
               >
             </li>
           </ul>
