--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       </div>
     </nav>
     <!-- END nav -->
-
+    
+<section class="ftco-section-1">
     <div class="hero-wrap">
       <div class="overlay"></div>
       <div class="container-fluid">
@@ -121,6 +122,28 @@
               >
             </p>
           </div>
+          <div
+                class="one-half align-self-sm-center d-flex justify-content-center"
+              >
+                <iframe
+                  width="680"
+                  height="480"
+                  src="https://www.youtube.com/embed/8byafonJMWI"
+                  title="Giới thiệu về BĐBP Bình Phước và Bài dự thi nhận thức về chấp hành kỷ luật, pháp luật... trong BĐBP"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen
+                ></iframe>
+              </div>
+        </div>
+      </div>
+    </div>
+    </section>
+
+    <section class="ftco-section ftco-section-2">
+      <div class="overlay"></div>
+      <div class="container">
+<!--         <div class="row"> -->
           <div class="one-half align-self-md-auto align-self-sm-center">
             <div class="slider-carousel owl-carousel">
               <div class="item">
@@ -137,27 +160,7 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <section class="ftco-section ftco-section-2">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 video-wrapper">
-            <iframe
-              width="680"
-              height="480"
-              src="https://www.youtube.com/embed/8byafonJMWI"
-              title="Giới thiệu về BĐBP Bình Phước và Bài dự thi nhận thức về chấp hành kỷ luật, pháp luật... trong BĐBP"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-            <!-- <h3 class="heading-white"></h3> -->
-          </div>
-        </div>
+<!--         </div> -->
       </div>
     </section>
 
