--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     
 <section class="ftco-section-1">
     <div class="hero-wrap">
-      <div class="overlay"></div>
+      <div class="overlay">
       <div class="container-fluid">
         <div
           class="slider-text d-md-flex align-items-center"
@@ -135,6 +135,7 @@
                   allowfullscreen
                 ></iframe>
               </div>
+          </div>
         </div>
       </div>
     </div>
