--- a/index.html
+++ b/index.html
@@ -81,48 +81,51 @@
     <!-- END nav -->
     
 <section class="ftco-section-1">
-    <div class="hero-wrap">
-      <div class="overlay">
-      <div class="container-fluid">
-        <div
-          class="slider-text d-md-flex align-items-center"
-          data-scrollax-parent="true"
-        >
-          <div
-            class="one-forth ftco-animate align-self-md-center"
-            data-scrollax=" properties: { translateY: '70%' }"
-          >
-            <h1 class="mb-4">
-              Bài Dự Thi
-              <strong
-                class="typewrite"
-                data-period="500"
-                data-type='[ "Nhận thức về tình hình chấp hành kỷ luật, pháp luật và đề xuất biện pháp phòng ngừa vi phạm trong Bộ đội Biên phòng", ""]'
-              >
-                <span class="wrap"></span>
-              </strong>
-            </h1>
-            <p
-              class="mb-md-5 mb-sm-3"
-              data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
+      <div class="hero-wrap">
+        <div class="overlay">
+          <div class="container-fluid">
+            <div
+              class="slider-text d-md-flex align-items-center"
+              data-scrollax-parent="true"
             >
-              Quân đội nhân dân Việt Nam do Chủ tịch Hồ Chí Minh trực tiếp sáng
-              lập, giáo dục và rèn luyện. Trải qua hơn 78 năm xây dựng, chiến
-              đấu, trưởng thành, dưới sự lãnh đạo của Đảng và Chủ tịch Hồ Chí
-              Minh kính yêu, quân đội ta đã giành nhiều thắng lợi từ hai cuộc
-              kháng chiến thần thánh chống thực dân Pháp, đế quốc Mỹ cho đến
-              cuộc chiến tranh bảo vệ biên giới phía Bắc và Tây Nam của Tổ
-              quốc.…
-            </p>
-            <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
-              <a
-                href="https://drive.google.com/file/d/1ODt2JjdFwZBlFQ5U_hWhckPhfBmIJYPo/view?usp=sharing"
-                class="btn btn-primary px-4 py-3"
-                >Xem bài thi</a
+              <div
+                class="one-forth ftco-animate align-self-md-center"
+                data-scrollax=" properties: { translateY: '70%' }"
               >
-            </p>
-          </div>
-          <div
+                <h1 class="mb-4">
+                  Bài Dự Thi
+                  <strong
+                    class="typewrite"
+                    data-period="500"
+                    data-type='[ "Nhận thức về tình hình chấp hành kỷ luật, pháp luật và đề xuất biện pháp phòng ngừa vi phạm trong Bộ đội Biên phòng", ""]'
+                  >
+                    <span class="wrap"></span>
+                  </strong>
+                </h1>
+                <p
+                  class="mb-md-5 mb-sm-3"
+                  data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
+                >
+                  Quân đội nhân dân Việt Nam do Chủ tịch Hồ Chí Minh trực tiếp
+                  sáng lập, giáo dục và rèn luyện. Trải qua hơn 78 năm xây dựng,
+                  chiến đấu, trưởng thành, dưới sự lãnh đạo của Đảng và Chủ tịch
+                  Hồ Chí Minh kính yêu, quân đội ta đã giành nhiều thắng lợi từ
+                  hai cuộc kháng chiến thần thánh chống thực dân Pháp, đế quốc
+                  Mỹ cho đến cuộc chiến tranh bảo vệ biên giới phía Bắc và Tây
+                  Nam của Tổ quốc.…
+                </p>
+                <p
+                  data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
+                >
+                  <a
+                    href="https://drive.google.com/file/d/1ODt2JjdFwZBlFQ5U_hWhckPhfBmIJYPo/view?usp=sharing"
+                    class="btn btn-primary px-4 py-3"
+                    >Xem bài thi</a
+                  >
+                </p>
+              </div>
+              <!-- <div class="row"> -->
+              <div
                 class="one-half align-self-sm-center d-flex justify-content-center"
               >
                 <iframe
@@ -135,12 +138,12 @@
                   allowfullscreen
                 ></iframe>
               </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
     </section>
-
+    
     <section class="ftco-section ftco-section-2">
       <div class="overlay"></div>
       <div class="container">
