--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://drive.google.com/file/d/1ODt2JjdFwZBlFQ5U_hWhckPhfBmIJYPo/view?usp=sharing"
+                href="https://drive.google.com/file/d/1tn-J-m29nJXdU7bF7kN0C3GdCYeJbBDd/view?usp=sharing"
                 >Xem bài thi</a
               >
             </li>
@@ -92,11 +92,11 @@
                 data-scrollax=" properties: { translateY: '70%' }"
               >
                 <h1 class="mb-4">
-                  Bài Dự Thi
+                  Bài Dự Thi Tìm Hiểu Pháp Luật
                   <strong
                     class="typewrite"
                     data-period="500"
-                    data-type='[ "Nhận thức về tình hình chấp hành kỷ luật, pháp luật và đề xuất biện pháp phòng ngừa vi phạm trong Bộ đội Biên phòng", ""]'
+                    data-type='[ "Chủ đề thanh niên quân đội thượng tôn pháp luật", ""]'
                   >
                     <span class="wrap"></span>
                   </strong>
@@ -117,7 +117,7 @@
                   data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
                 >
                   <a
-                    href="https://drive.google.com/file/d/1ODt2JjdFwZBlFQ5U_hWhckPhfBmIJYPo/view?usp=sharing"
+                    href="https://drive.google.com/file/d/1tn-J-m29nJXdU7bF7kN0C3GdCYeJbBDd/view?usp=sharing"
                     class="btn btn-primary px-4 py-3"
                     >Xem bài thi</a
                   >
