--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <title>Tuổi trẻ Bộ đội Biên phòng tỉnh Bình Phước</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="css/animate.css" />
@@ -30,16 +25,12 @@
     <link rel="stylesheet" href="css/flaticon.css" />
     <link rel="stylesheet" href="css/icomoon.css" />
     <link rel="stylesheet" href="css/style.css" />
-  </head>
+</head>
 
-  <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
-      id="ftco-navbar"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="index.html"
-          >Tuổi trẻ Bộ đội Biên phòng tỉnh Bình Phước</a
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Tuổi trẻ Bộ đội Biên phòng tỉnh Bình Phước</a
         >
         <button
           class="navbar-toggler"
@@ -117,48 +108,52 @@
                   data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"
                 >
                   <a
-                    href="https://drive.google.com/file/d/1tn-J-m29nJXdU7bF7kN0C3GdCYeJbBDd/view?usp=sharing"
+                    href="https://drive.google.com/file/d/11pgsN34p8eYAqhYRL8Ujnz1E8s5WjOa6/view?usp=sharing"
                     class="btn btn-primary px-4 py-3"
-                    >Xem bài thi</a
+                    >Xem quyển 1</a
+                  >
+                  <a
+                    href="https://drive.google.com/file/d/1RRIiR5zq075GpVzU0PZAMNL9EZm7azX7/view?usp=sharing"
+                    class="btn btn-primary px-4 py-3"
+                    >Xem quyển 2</a
                   >
                 </p>
               </div>
-              
+
               <div
                 class="one-half align-self-sm-center d-flex justify-content-center"
               >
-                <iframe
-                  width="680"
-                  height="480"
-                  src="https://www.youtube.com/embed/8byafonJMWI"
-                  title="Giới thiệu về BĐBP Bình Phước và Bài dự thi nhận thức về chấp hành kỷ luật, pháp luật... trong BĐBP"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  allowfullscreen
-                ></iframe>
+                <div class="slider-carousel owl-carousel">
+                  <div class="item">
+                    <img
+                      src="./images/quyen1.png"
+                      class="img-fluid img"
+                      alt=""
+                    />
+                  </div>
+                  <div class="item">
+                    <img
+                      src="./images/quyen2.png"
+                      class="img-fluid img"
+                      alt=""
+                    />
+                  </div>
+                  <div class="item">
+                    <img
+                      src="./images/quyen1-1.png"
+                      class="img-fluid img"
+                      alt=""
+                    />
+                  </div>
+                  <div class="item">
+                    <img
+                      src="./images/quyen2-1.png"
+                      class="img-fluid img"
+                      alt=""
+                    />
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-section ftco-section-2">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="one-half align-self-md-auto align-self-sm-center">
-          <div class="slider-carousel owl-carousel">
-            <div class="item">
-              <img src="./images/Book1.png" class="img-fluid img" alt="" />
-            </div>
-            <div class="item">
-              <img src="./images/Book2.png" class="img-fluid img" alt="" />
-            </div>
-            <div class="item">
-              <img src="./images/Book3.png" class="img-fluid img" alt="" />
-            </div>
-            <div class="item">
-              <img src="./images/TongHop.png" class="img-fluid img" alt="" />
             </div>
           </div>
         </div>
@@ -333,7 +328,6 @@
         </div>
       </div>
     </div>
-
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
